syntax = "proto3";

package user;

option go_package = "./proto;user";

service User {
  rpc UserRegister(UserRegisterRequest) returns (UserRegisterResponse){}
  rpc FindUser(UserRequest) returns (UserResponse){}
}

message UserMessage {
  int64 id = 1;
  string username = 2;
}

message UserRequest{
  UserMessage user = 1;
}

message UserResponse{
  int64 id = 1;
  string username = 2;
  int64 age = 3;
}

message UserRegisterRequest{
  string username = 1;
  int64 age = 2;
}

message UserRegisterResponse{
  int64 id = 1;
  string username = 2;
}